--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <groupId>io.druid</groupId>
     <artifactId>oss-parent</artifactId>
-    <version>2</version>
+    <version>3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Druid Parent POM</name>
@@ -45,7 +45,7 @@
         <connection>scm:git:ssh://git@github.com/druid-io/oss-parent.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/druid-io/oss-parent.git</developerConnection>
         <url>https://github.com/druid-io/oss-parent.git</url>
-        <tag>oss-parent-2</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <prerequisites>
